[package]
name = "rover"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.11", features = ["persistence"] }
stick = "0.11"
pasts = "0.7"
bincode = "1.3.2"
serde = "1.0.125"
async-std = { version = "1.9.0", features = ["attributes"] }
anyhow = "1.0.40"

[features]
default = []
rover = []
